# open-finance-one-financial-view

./: .env.example  .gitignore  README.md
backend/: Dockerfile  pyproject.toml
backend/acme_ofv/: config.py  db.py  query_log.py
backend/acme_ofv/api/: app.py  serialize.py
backend/acme_ofv/api/v1/: __init__.py  deps.py  router.py
backend/acme_ofv/api/v1/routes/: __init__.py  consent.py  one_view.py  ops.py  pfm.py  simulation.py  underwriting.py
backend/acme_ofv/consent/: gate.py  producer.py  purpose_map.py
backend/acme_ofv/eraser/: worker.py
backend/acme_ofv/infra/: db_setup.py  search_setup.py
backend/acme_ofv/ingestion/: amounts.py  backfill.py  enrichment.py  features.py  ofp_client.py  profile.py  recurring.py  service.py  snapshots.py  sync.py
backend/acme_ofv/mock_ofp/: app.py
backend/acme_ofv/models/: __init__.py  requests.py
backend/acme_ofv/ofp_models/: __init__.py  enums.py  objects.py
backend/acme_ofv/search/: __init__.py  embed_samples.py  embedding_service.py  pipeline_builders.py  service.py  text.py
backend/acme_ofv/seed/: gen.py  link_all.py  run_seed.py
backend/acme_ofv/services/: __init__.py  consent_service.py  one_view_service.py  ops_service.py  pfm_service.py  simulation_service.py  underwriting_service.py
backend/acme_ofv/streaming/: __init__.py  msk_client.py  topic_admin.py
deploy/terraform/: main.tf  (+4 more)
docs/: ARCHITECTURE.md  LUCIDCHART-DIAGRAM-BRIEF.md  WALKTHROUGH.md
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
ops/: docker-compose.aws.yml  reseed.sh  runbook.md  start_all.sh
(+19 files in other folders)
