[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.10",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.49.0",
    "voyageai>=0.3",
    # consent-event streaming over MSK (Kafka) + AWS deploy
    "aiokafka>=0.12",
    "aws-msk-iam-sasl-signer-python>=1.0",
    "boto3>=1.35",
    "gunicorn>=23.0",
]
